# Smiley-Finder

./: .clang-format  CMakeLists.txt  README.md  run_code_coverage.sh
report/ccov/: cov.info  cov_baseline.info  report.txt
report/ccov/html/: index-sort-f.html  index-sort-l.html  index.html
report/ccov/html/core/: Analyzer.cpp.func-sort-c.html  Analyzer.cpp.func.html  Analyzer.cpp.gcov.html  CmdLineParser.cpp.func-sort-c.html  CmdLineParser.cpp.func.html  CmdLineParser.cpp.gcov.html  CmdLineParser.hpp.func-sort-c.html  CmdLineParser.hpp.func.html  CmdLineParser.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
report/ccov/html/format/: ConsoleFormat.cpp.func-sort-c.html  ConsoleFormat.cpp.func.html  ConsoleFormat.cpp.gcov.html  ConsoleFormat.hpp.func-sort-c.html  ConsoleFormat.hpp.func.html  ConsoleFormat.hpp.gcov.html  TextFormat.cpp.func-sort-c.html  TextFormat.cpp.func.html  TextFormat.cpp.gcov.html  TextFormat.hpp.func-sort-c.html  TextFormat.hpp.func.html  TextFormat.hpp.gcov.html  XmlFormat.cpp.func-sort-c.html  XmlFormat.cpp.func.html  XmlFormat.cpp.gcov.html  XmlFormat.hpp.func-sort-c.html  XmlFormat.hpp.func.html  XmlFormat.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
report/ccov/html/output/: Output.cpp.func-sort-c.html  Output.cpp.func.html  Output.cpp.gcov.html  Output.hpp.func-sort-c.html  Output.hpp.func.html  Output.hpp.gcov.html  OutputFormatSettings.cpp.func-sort-c.html  OutputFormatSettings.cpp.func.html  OutputFormatSettings.cpp.gcov.html  OutputFormatSettings.hpp.func-sort-c.html  OutputFormatSettings.hpp.func.html  OutputFormatSettings.hpp.gcov.html  OutputMessage.cpp.func-sort-c.html  OutputMessage.cpp.func.html  OutputMessage.cpp.gcov.html  (+6 more)
src/: CMakeLists.txt  main.cpp
src/core/: Analyzer.cpp  Analyzer.hpp  CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.hpp
src/format/: CMakeLists.txt  ConsoleFormat.cpp  ConsoleFormat.hpp  IFormat.hpp  TextFormat.cpp  TextFormat.hpp  XmlFormat.cpp  XmlFormat.hpp
src/output/: CMakeLists.txt  Output.cpp  Output.hpp  OutputFormatSettings.cpp  OutputFormatSettings.hpp  OutputMessage.cpp  OutputMessage.hpp
tests/: CMakeLists.txt  MockFormat.hpp  gtest_main.cpp
tests/core/: AnalyzerTest.cpp  CMakeLists.txt  CmdLineParserTest.cpp
tests/format/: CMakeLists.txt  ConsoleFormatTest.cpp  TextFormatTest.cpp  XmlFormatTest.cpp
tests/output/: CMakeLists.txt  OutputFormatSettingsTest.cpp  OutputMessageTest.cpp  OutputTest.cpp
